[gd_scene load_steps=22 format=2]

[ext_resource path="res://background.png" type="Texture" id=1]
[ext_resource path="res://Title.tscn" type="PackedScene" id=2]
[ext_resource path="res://Expression.gd" type="Script" id=3]
[ext_resource path="res://Grid.gd" type="Script" id=4]
[ext_resource path="res://Root.gd" type="Script" id=5]
[ext_resource path="res://ActiveTiles.gd" type="Script" id=6]
[ext_resource path="res://pausebutton.png" type="Texture" id=7]
[ext_resource path="res://settingsbutton.png" type="Texture" id=8]
[ext_resource path="res://LogicParser.gd" type="Script" id=9]
[ext_resource path="res://PauseButton.gd" type="Script" id=10]
[ext_resource path="res://TimeLeftLabel.gd" type="Script" id=11]
[ext_resource path="res://FeedbackLabel.gd" type="Script" id=12]
[ext_resource path="res://Clock.gd" type="Script" id=13]
[ext_resource path="res://clockfont.tres" type="DynamicFont" id=14]
[ext_resource path="res://plane.png" type="Texture" id=15]
[ext_resource path="res://Transition2.gd" type="Script" id=16]
[ext_resource path="res://enterbutton.png" type="Texture" id=17]
[ext_resource path="res://ScoreLabel.gd" type="Script" id=18]
[ext_resource path="res://DifficultyButton.gd" type="Script" id=19]

[sub_resource type="Animation" id=3]
resource_name = "Transition"
length = 3.0
tracks/0/type = "value"
tracks/0/path = NodePath(".:position")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 3 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ Vector2( 600, 300 ), Vector2( 1624, 300 ) ]
}

[sub_resource type="Animation" id=4]
resource_name = "Transition2"
length = 3.0
tracks/0/type = "value"
tracks/0/path = NodePath(".:position")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 3 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ Vector2( -600, 300 ), Vector2( 600, 300 ) ]
}

[node name="Game" type="Node2D"]
script = ExtResource( 5 )

[node name="Background" type="Sprite" parent="."]
position = Vector2( 512, 300 )
texture = ExtResource( 1 )

[node name="Title" parent="." instance=ExtResource( 2 )]

[node name="Grid" type="Node2D" parent="."]
position = Vector2( 307, 292 )
script = ExtResource( 4 )

[node name="ActiveTiles" type="Node2D" parent="."]
position = Vector2( 259, 221 )
script = ExtResource( 6 )

[node name="PauseButton" type="Button" parent="."]
margin_left = 936.0
margin_top = 97.0
margin_right = 1011.0
margin_bottom = 172.0
action_mode = 0
icon = ExtResource( 7 )
flat = true
icon_align = 1
expand_icon = true
script = ExtResource( 10 )

[node name="DifficultyButton" type="MenuButton" parent="."]
margin_left = 936.0
margin_top = 14.0
margin_right = 1011.0
margin_bottom = 89.0
icon = ExtResource( 8 )
expand_icon = true
items = [ "Easy", null, 0, false, false, 0, 0, null, "", false, "Medium", null, 0, false, false, 1, 0, null, "", false ]
script = ExtResource( 19 )

[node name="Clock" type="Timer" parent="."]
one_shot = true
script = ExtResource( 13 )

[node name="TimeLeftLabel" type="Label" parent="."]
margin_left = 647.0
margin_top = 336.0
margin_right = 708.0
margin_bottom = 387.0
custom_fonts/font = ExtResource( 14 )
text = "60"
script = ExtResource( 11 )

[node name="CheckButton" type="Button" parent="."]
margin_left = 38.0
margin_top = 361.0
margin_right = 286.0
margin_bottom = 503.0
icon = ExtResource( 17 )
flat = true
expand_icon = true

[node name="LogicParser" type="Node2D" parent="."]
position = Vector2( 163, 429 )
script = ExtResource( 9 )

[node name="PlaneTransition" type="Sprite" parent="."]
visible = false
position = Vector2( 600, 300 )
z_index = 1
texture = ExtResource( 15 )

[node name="Transition" type="AnimationPlayer" parent="PlaneTransition"]
anims/Transition = SubResource( 3 )
anims/Transition2 = SubResource( 4 )
script = ExtResource( 16 )

[node name="Expression" type="Node2D" parent="."]
script = ExtResource( 3 )

[node name="ScoreLabel" type="Label" parent="."]
margin_left = 644.0
margin_top = 404.0
margin_right = 861.0
margin_bottom = 476.0
custom_fonts/font = ExtResource( 14 )
text = "Score: 0"
script = ExtResource( 18 )

[node name="FeedbackLabel" type="Label" parent="."]
margin_left = 644.0
margin_top = 466.0
margin_right = 938.0
margin_bottom = 517.0
custom_fonts/font = ExtResource( 14 )
script = ExtResource( 12 )

[connection signal="ready" from="." to="Grid" method="_on_Root_ready"]
[connection signal="ready" from="." to="Expression" method="_on_Root_ready"]
[connection signal="active_tiles_update" from="Grid" to="ActiveTiles" method="_on_Grid_active_tiles_update"]
[connection signal="checkButton_pressed" from="ActiveTiles" to="LogicParser" method="_on_ActiveTiles_checkButton_pressed"]
[connection signal="pressed" from="PauseButton" to="Grid" method="_on_PauseButton_pressed"]
[connection signal="pressed" from="PauseButton" to="PauseButton" method="_on_PauseButton_pressed"]
[connection signal="pressed" from="PauseButton" to="Clock" method="_on_PauseButton_pressed"]
[connection signal="time_left" from="Clock" to="TimeLeftLabel" method="_on_Clock_time_left"]
[connection signal="timeout" from="Clock" to="Grid" method="_on_Clock_timeout"]
[connection signal="timeout" from="Clock" to="PlaneTransition/Transition" method="_on_Clock_timeout"]
[connection signal="pressed" from="CheckButton" to="ActiveTiles" method="_on_CheckButton_pressed"]
[connection signal="activeTilesCorrect" from="LogicParser" to="Grid" method="_on_LogicParser_activeTilesCorrect"]
[connection signal="activeTilesCorrect" from="LogicParser" to="LogicParser" method="_on_LogicParser_activeTilesCorrect"]
[connection signal="activeTilesCorrect" from="LogicParser" to="ScoreLabel" method="_on_LogicParser_activeTilesCorrect"]
[connection signal="activeTilesCorrect" from="LogicParser" to="FeedbackLabel" method="_on_LogicParser_activeTilesCorrect"]
[connection signal="activeTilesIncorrect" from="LogicParser" to="FeedbackLabel" method="_on_LogicParser_activeTilesIncorrect"]
[connection signal="activeTilesInvalid" from="LogicParser" to="Grid" method="_on_LogicParser_activeTilesInvalid"]
[connection signal="activeTilesInvalid" from="LogicParser" to="FeedbackLabel" method="_on_LogicParser_activeTilesInvalid"]
[connection signal="duplicateSoln" from="LogicParser" to="FeedbackLabel" method="_on_LogicParser_duplicateSoln"]
[connection signal="ready" from="PlaneTransition" to="PlaneTransition/Transition" method="_on_PlaneTransition_ready"]
[connection signal="animation_finished" from="PlaneTransition/Transition" to="PlaneTransition/Transition" method="_on_Transition_animation_finished"]
[connection signal="expr_generated" from="Expression" to="LogicParser" method="_on_Expression_expr_generated"]
